@@ -1,3 +1,9 @@
+2008-07-31  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* ObsoleteMessagesShouldNotBeEmptyRule.cs: Speed up rule. Only
+	18 out of 72 assemblies (Mono 2.0 profile) refers to the
+	ObsoleteAttribute type (+1 for mscorlib that defines it).
+
 2008-07-13  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* DoNotForgetNotImplementedMethodsRule.cs: New. Rule to check if
